[gd_scene load_steps=4 format=3 uid="uid://diiyoithpg5hk"]

[ext_resource type="Script" path="res://server.gd" id="1_0h5vn"]
[ext_resource type="Script" path="res://menu_button.gd" id="2_r6ymf"]
[ext_resource type="PackedScene" uid="uid://cvswvndtcipjd" path="res://wire_box.tscn" id="3_75c7u"]

[node name="Server" type="Node"]
script = ExtResource("1_0h5vn")

[node name="NetworkContainer" type="VBoxContainer" parent="."]
offset_left = 198.0
offset_top = 145.0
offset_right = 411.0
offset_bottom = 610.0

[node name="Join" type="Button" parent="NetworkContainer"]
custom_minimum_size = Vector2(160, 80)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Join"

[node name="SettingsContainer" type="VBoxContainer" parent="NetworkContainer"]
visible = false
layout_mode = 2

[node name="SettingsLabel" type="Label" parent="NetworkContainer/SettingsContainer"]
layout_mode = 2
text = "Enter a name:"
horizontal_alignment = 1

[node name="NameCon" type="HBoxContainer" parent="NetworkContainer/SettingsContainer"]
layout_mode = 2

[node name="EnterName" type="LineEdit" parent="NetworkContainer/SettingsContainer/NameCon"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Name"

[node name="SettingsApplyButton" type="Button" parent="NetworkContainer/SettingsContainer/NameCon"]
layout_mode = 2
text = "Enter"

[node name="LobbyContainer" type="VBoxContainer" parent="NetworkContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="NetworkLabel" type="Label" parent="NetworkContainer/LobbyContainer"]
layout_mode = 2
text = "Joined Players"
horizontal_alignment = 1

[node name="PlayerList" type="ItemList" parent="NetworkContainer/LobbyContainer"]
layout_mode = 2
size_flags_vertical = 3
item_count = 2

[node name="StartButton" type="Button" parent="NetworkContainer/LobbyContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Start"

[node name="Label" type="Label" parent="."]
offset_left = 83.0
offset_top = 12.0
offset_right = 123.0
offset_bottom = 35.0

[node name="Host" type="Button" parent="."]
offset_left = 424.0
offset_top = -1.0
offset_right = 593.0
offset_bottom = 77.0
text = "Host (Debug)"

[node name="RoleLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -51.5
offset_right = 51.5
offset_bottom = 34.0
grow_horizontal = 2

[node name="PlayerGrid" type="HFlowContainer" parent="."]
visible = false
custom_minimum_size = Vector2(500, 800)
offset_left = 50.0
offset_top = 100.0
offset_right = 550.0
offset_bottom = 900.0

[node name="HandCon" type="VBoxContainer" parent="."]
offset_left = 3.00002
offset_top = 998.0
offset_right = 202.0
offset_bottom = 1247.0
scale = Vector2(0.840002, 0.8)
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="HandCon"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "My Wires"
horizontal_alignment = 1

[node name="Hand" type="ItemList" parent="HandCon"]
layout_mode = 2
size_flags_vertical = 3

[node name="ClaimUI" type="VBoxContainer" parent="."]
offset_left = 170.0
offset_top = 1036.0
offset_right = 291.0
offset_bottom = 1137.0
scale = Vector2(1.5, 1.5)

[node name="DefuseWireContainer" type="HBoxContainer" parent="ClaimUI"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="ClaimUI/DefuseWireContainer"]
layout_mode = 2
text = "Defuse Wire:"

[node name="MenuButton" type="MenuButton" parent="ClaimUI/DefuseWireContainer"]
layout_mode = 2
text = "0"
script = ExtResource("2_r6ymf")

[node name="BombContainer" type="HBoxContainer" parent="ClaimUI"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="ClaimUI/BombContainer"]
layout_mode = 2
text = "Bomb:"

[node name="MenuButton" type="MenuButton" parent="ClaimUI/BombContainer"]
layout_mode = 2
text = "0"
script = ExtResource("2_r6ymf")

[node name="Button" type="Button" parent="ClaimUI"]
layout_mode = 2
text = "Declare!"

[node name="HistoryCon" type="VBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 351.0
offset_top = -352.0
offset_right = 601.0
offset_bottom = -2.0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label2" type="Label" parent="HistoryCon"]
layout_mode = 2
text = "History"
horizontal_alignment = 1

[node name="History" type="ItemList" parent="HistoryCon"]
layout_mode = 2
size_flags_vertical = 3

[node name="Results" type="VBoxContainer" parent="."]
visible = false
custom_minimum_size = Vector2(150, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.0
offset_top = -61.0
offset_right = 77.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Results"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Win"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="Results"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Restart"

[node name="MyWireBox" parent="." instance=ExtResource("3_75c7u")]
visible = false
position = Vector2(82, 1115)

[node name="OthersWireBox" parent="." instance=ExtResource("3_75c7u")]
visible = false

[connection signal="pressed" from="NetworkContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="NetworkContainer/SettingsContainer/NameCon/SettingsApplyButton" to="." method="_on_settings_apply_button_pressed"]
[connection signal="pressed" from="NetworkContainer/LobbyContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Host" to="." method="_start_server"]
[connection signal="pressed" from="ClaimUI/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Results/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="wire_box_cut" from="OthersWireBox" to="." method="client_wire_box_cut"]
